--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-funbox",
+  "name": "test-high-tech",
   "version": "2.0.0",
   "type": "module",
   "description": "тестовое задание",
